# GL_Playground

./: CMakeLists.txt  camera.h  constant.h  main.cpp  mesh.h  model.h  shader.h  stb_image.h  utils.h
shader/: model.fs
